<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <!-- content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <!-- title -->
        <TextView
            android:id="@+id/tv_mobile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_title"
            android:padding="10dp"
            android:text="@string/new_update_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <!-- Mobile No -->
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/new_update_msg"
            android:textColor="#333333"
            android:textSize="16sp" />

        <!-- OK button-->
        <Button
            android:id="@+id/positive_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_dialog_positive"
            android:text="@string/update_from"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bt_dialog_close"
        android:text="X"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

</RelativeLayout>