<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="right">

                <Button
                    android:id="@+id/imageView_custom_dialog_close"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/bt_dialog_popup_close"
                    android:text="X"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/envelope_with_logo">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:visibility="visible">


                    <TextView
                        android:id="@+id/tv_notification_Message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/ListCompanyTextPopup"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_notification_Message"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/CompanyTextMsg"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:gravity="center_horizontal">


                    <RelativeLayout
                        android:id="@+id/rl_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/rl_later"
                        android:layout_marginBottom="10dp"
                        android:visibility="visible">


                        <TextView
                            android:id="@+id/show_video_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/video_border_style"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="5dp"
                            android:src="@drawable/ic_video_play"
                            android:text="@string/ClickHereText"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_later"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:visibility="visible">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/video_border_style"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="10dp"
                            android:src="@drawable/ic_video_play"
                            android:text="@string/Remindlater"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
